--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 </head>
 <body>
   <div class="root">
-  <!-- HEADER TODO разобраться как экспортировать изображения и как подключить шрифты через @font-face-->
   <header class="header">
-    <img class="logo" src="images/header-logo.svg" alt="Логотип">
-    <nav class="lang-nav" aria-label="Lang">
-      <ol class="lang-nav__list">
-        <li class="lang-nav__item">
-          <a href="#" class="lang-nav__lang-link">Ru</a>
-        </li>
-        <li class="lang-nav__item">
-          <a href="#" class="lang-nav__lang-link">En</a>
-        </li>
-      </ol>
-    </nav>
+    <div class="header__container">
+      <img class="header__logo" src="images/header-logo.svg" alt="Логотип">
+      <nav class="main-nav" aria-label="Lang">
+        <ol class="main-nav__list">
+          <li class="main-nav__item">
+            <a href="#" class="main-nav__lang-link">Ru</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="#" class="main-nav__lang-link">En</a>
+          </li>
+        </ol>
+      </nav>
+    </div>
   </header>
-  <main class="content">
+   <main class="content">
     <section class="lead">
       <h1 class="lead__title">Путешествия&nbsp;по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках&nbsp;новостей, а здесь.</p>
@@ -46,7 +47,7 @@
         <dd>241
       </dl>
     </section>
-    <section class="photo-grid">
+   <!-- <section class="photo-grid">
       <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="фото из поезда">
       <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="горы">
       <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="волчара">
@@ -61,7 +62,6 @@
       <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="ergaki">
     </section>
     <section class="places">
-      <!-- Куршская коса -->
       <arcticle class="place">
         <h3 class="place__title">Куршская коса</h3>
         <div class="place__website">
@@ -74,7 +74,6 @@
           <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
         </div>
       </arcticle>
-        <!-- Кольский -->
       <arcticle class="place">
         <h3 class="place__title">Кольский</h3>
         <div class="place__website">
@@ -87,7 +86,6 @@
           <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
         </div>
       </arcticle>
-        <!-- Алтай -->
       <arcticle class="place">
         <h3 class="place__title">Алтай</h3>
         <div class="place__website">
@@ -100,7 +98,6 @@
           <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
         </div>
       </arcticle>
-        <!-- Зимний Байкал -->
       <arcticle class="place">
         <h3 class="place__title">Зимний Байкал</h3>
         <div class="place__website">
@@ -113,7 +110,6 @@
           <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
         </div>
       </arcticle>
-        <!-- Карелия -->
       <arcticle class="place">
         <h3 class="place__title">Карелия</h3>
         <div class="place__website">
@@ -144,6 +140,6 @@
       </ol>
     </nav>
   </footer>
-</div>
+  </div>
 </body>
-</html>
+</html> -->
