--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pages/index.css">
-  <title>Путешествия по России &lt;3</title>
+  <title>Путешествия по России</title>
 </head>
 <body>
-  <div class="root">
+  <div class="page">
   <header class="header">
     <div class="header__container">
       <img class="header__logo" src="images/header-logo.svg" alt="Логотип">
@@ -26,28 +26,28 @@
   </header>
    <main class="content">
     <section class="lead">
-      <h1 class="lead__title">Путешествия&nbsp;по России</h1>
-      <p class="lead__subtitle">Настоящая страна не в выпусках&nbsp;новостей, а здесь.</p>
+      <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+      <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
       <img class="lead__image" src="images/lead-polka.jpg" alt="Фото из поезда">
       <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
     </section>
     <section class="intro">
-      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
       <p class="intro__subtitle">По&nbsp;опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36% планируют провести отпуск в&nbsp;родной стране. Мол, чего мы&nbsp;тут, дома, не&nbsp;видели? На&nbsp;самом деле, Россия&nbsp;&mdash; это целая вселенная с&nbsp;ласковым морем юга, густыми лесами Саян и&nbsp;суровыми льдами плато Путорана. А&nbsp;ещё увидеть все эти красоты можно без миллионов на&nbsp;счету, загранпаспорта и&nbsp;многочасовых перелетов. Как, например, Вера Башмакова&nbsp;&mdash; смелая молодая мама, которая взяла в&nbsp;охапку троих детей, усадила их&nbsp;в&nbsp;свою &laquo;Ладу&raquo; и&nbsp;проехала 20&nbsp;тысяч километров по&nbsp;родной стране. Мы&nbsp;выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
       <dl class="intro__list">
-        <dt>Часовых поясов
-        <dd>11
-        <dt>Объектов природного наследия ЮНЕСКО
-        <dd>12
-        <dt>Объектов культурного наследия ЮНЕСКО
-        <dd>16
-        <dt>Природных заповедников
-        <dd>105
-        <dt>Аэропортов
-        <dd>241
+        <dt class="intro__list_key">Часовых поясов
+        <dd class="intro__list_value">11<br>
+        <dt class="intro__list_key">Объектов природного наследия ЮНЕСКО
+        <dd class="intro__list_value">12<br>
+        <dt class="intro__list_key">Объектов культурного наследия ЮНЕСКО
+        <dd class="intro__list_value">16<br>
+        <dt class="intro__list_key">Природных заповедников
+        <dd class="intro__list_value">105<br>
+        <dt class="intro__list_key">Аэропортов
+        <dd class="intro__list_value">241<br>
       </dl>
     </section>
-   <!-- <section class="photo-grid">
+    <section class="photo-grid">
       <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="фото из поезда">
       <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="горы">
       <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="волчара">
@@ -61,7 +61,7 @@
       <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="байкал2">
       <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="ergaki">
     </section>
-    <section class="places">
+    <!-- <section class="places">
       <arcticle class="place">
         <h3 class="place__title">Куршская коса</h3>
         <div class="place__website">
