--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
       <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="байкал2">
       <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="ergaki">
     </section>
-    <!-- <section class="places">
+    <section class="places">
       <arcticle class="place">
         <h3 class="place__title">Куршская коса</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="#">park-kosa.ru</a>
+          <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
         <img class="place__image" src="images/place-kosa.jpg" alt="коса">
         <div class="place__main-text">
@@ -78,7 +78,7 @@
         <h3 class="place__title">Кольский</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="#"></a>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
         </div>
         <img class="place__image" src="images/place-kolsky.jpg" alt="Кольский">
         <div class="place__main-text">
@@ -90,7 +90,7 @@
         <h3 class="place__title">Алтай</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="#"></a>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
         </div>
         <img class="place__image" src="images/place-altai.jpg" alt="Алтай">
         <div class="place__main-text">
@@ -102,7 +102,7 @@
         <h3 class="place__title">Зимний Байкал</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="#"></a>
+          <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
         <img class="place__image" src="images/place-winter-baikal.jpg" alt="Зимний Байкал">
         <div class="place__main-text">
@@ -114,32 +114,33 @@
         <h3 class="place__title">Карелия</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
-          <a class="place__link" href="#"></a>
+          <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
         </div>
         <img class="place__image" src="images/place-karelia.jpg" alt="Карелия">
         <div class="place__main-text">
           <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
         </div>
       </arcticle>
-
     </section>
     <section class="cover">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala">
       <h4 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h4>
       <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+      </a>
     </section>
   </main>
   <footer class="footer">
     <nav class="breadcrumb" aria-label="Breadcrumb">
       <ol class="breadcrumb__list">
-        <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Карты</a></li>
-        <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Погода</a></li>
-        <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Расписание</a></li>
-        <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Календарь</a></li>
-        <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Путешествия</a></li>
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="https://yandex.ru/maps">Карты</a></li>
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="https://yandex.ru/pogoda">Погода</a></li>
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="https://rasp.yandex.ru">Расписание</a></li>
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="https://calendar.yandex.ru">Календарь</a></li>
+        <li class="breadcrumb__item"><a class="breadcrumb__link" href="https://travel.yandex.ru">Путешествия</a></li>
         <li class="breadcrumb__item"><p class="breadcrumb__copyright">&copy; 2022. Аврора Ренард</p></li>
       </ol>
     </nav>
   </footer>
   </div>
 </body>
-</html> -->
+</html>
