--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <li class="breadcrumb__item"><a class="breadcrumb__link" href="https://rasp.yandex.ru">Расписание</a></li>
         <li class="breadcrumb__item"><a class="breadcrumb__link" href="https://calendar.yandex.ru">Календарь</a></li>
         <li class="breadcrumb__item"><a class="breadcrumb__link" href="https://travel.yandex.ru">Путешествия</a></li>
-        <li class="breadcrumb__item"><p class="breadcrumb__copyright">&copy; 2022. Аврора Ренард</p></li>
       </ul>
     </nav>
+    <p class="footer__copyright">&copy; 2022. Аврора Ренард</p>
   </footer>
   </div>
 </body>
