--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,13 +25,14 @@
     </div>
   </header>
    <main class="content">
-     <!-- TODO названия классов единообразными сделать  -->
+     <!-- section 1  -->
     <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
-      <img class="lead__image" src="images/lead-polka.jpg" alt="Фото из поезда">
+      <img class="lead__image" src="images/lead-polka.jpg" alt="Фото из поезда - женщина спит возле окна.">
       <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
     </section>
+     <!-- section 2  -->
     <section class="intro">
       <div class="intro__card">
         <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
@@ -49,21 +50,24 @@
           </ul>
       </div>
     </section>
+     <!-- section 3  -->
     <section class="photo-grid">
-      <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="фото из поезда">
-      <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="горы">
-      <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="волчара">
-      <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="сочи">
-      <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="колесо на льду">
-      <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="байкал">
-      <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="эльбрус">
-      <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="знак пешеходного перехода">
-      <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="камчатка">
-      <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="камчатка2">
-      <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="байкал2">
-      <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="ergaki">
+      <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Фото из поезда - пейзаж в окне.">
+      <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горные хребты в облаках.">
+      <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Собака на стоге сена в поле.">
+      <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Хвойный лес в тумане.">
+      <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Машина на замерзшем озере">
+      <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Берег Байкала летом.">
+      <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Вершины Эльбруса на фоне пасмурного неба.">
+      <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Дорожный знак пешеходного перехода">
+      <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Горы Камчатки.">
+      <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Пейзаж Камчатка летом.">
+      <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Побережье Байкала зимой.">
+      <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Горные вершины в тумане.">
     </section>
-    <section class="places">
+    <!-- section 4 -->
+    <section class="places" aria-label="Places">
+      <!-- card Куршская коса -->
       <arcticle class="place">
         <h3 class="place__title">Куршская коса</h3>
         <div class="place__website">
@@ -76,6 +80,7 @@
           <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
         </div>
       </arcticle>
+      <!-- card Кольский -->
       <arcticle class="place">
         <h3 class="place__title">Кольский</h3>
         <div class="place__website">
@@ -88,6 +93,7 @@
           <p class="place__paragraph">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
         </div>
       </arcticle>
+      <!-- card Алтай -->
       <arcticle class="place">
         <h3 class="place__title">Алтай</h3>
         <div class="place__website">
@@ -100,6 +106,7 @@
           <p class="place__paragraph">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
         </div>
       </arcticle>
+      <!-- card Зимний Байкал -->
       <arcticle class="place">
         <h3 class="place__title">Зимний Байкал</h3>
         <div class="place__website">
@@ -112,6 +119,7 @@
           <p class="place__paragraph">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
         </div>
       </arcticle>
+      <!-- card Карелия -->
       <arcticle class="place">
         <h3 class="place__title">Карелия</h3>
         <div class="place__website">
@@ -124,7 +132,7 @@
         </div>
       </arcticle>
     </section>
-    <!-- TODO должны быть все 6 заголовков от h1 до h6 -->
+    <!-- section 5 -->
     <section class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h4 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h4>
