--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </section>
      <!-- section 3  -->
-    <section class="photo-grid">
+    <div class="photo-grid">
       <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Фото из поезда - пейзаж в окне.">
       <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горные хребты в облаках.">
       <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Собака на стоге сена в поле.">
@@ -64,7 +64,7 @@
       <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Пейзаж Камчатка летом.">
       <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Побережье Байкала зимой.">
       <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Горные вершины в тумане.">
-    </section>
+    </div>
     <!-- section 4 -->
     <section class="places" aria-label="Places">
       <!-- card Куршская коса -->
@@ -133,12 +133,12 @@
       </div>
     </section>
     <!-- section 5 -->
-    <section class="cover">
+    <div class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <p class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</p>
         <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
         </a>
-    </section>
+      </div>
   </main>
   <footer class="footer">
     <nav class="breadcrumb" aria-label="Breadcrumb">
