--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="header__main-nav" aria-label="Lang">
         <ul class="header__list">
           <li class="header__item">
-            <a href="#" class="header__lang-link header__lang-link_lang_ru">Ru</a>
+            <a href="#" class="header__lang-link header__lang-link_ru">Ru</a>
           </li>
           <li class="header__item">
             <a href="#" class="header__lang-link">En</a>
@@ -25,14 +25,12 @@
     </div>
   </header>
    <main class="content">
-     <!-- section 1  -->
     <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
       <img class="lead__image" src="images/lead-polka.jpg" alt="Фото из поезда - женщина спит возле окна.">
       <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
     </section>
-     <!-- section 2  -->
     <section class="intro">
       <div class="intro__card">
         <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
@@ -50,7 +48,6 @@
           </ul>
       </div>
     </section>
-     <!-- section 3  -->
     <div class="photo-grid">
       <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Фото из поезда - пейзаж в окне.">
       <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горные хребты в облаках.">
@@ -65,7 +62,6 @@
       <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Побережье Байкала зимой.">
       <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Горные вершины в тумане.">
     </div>
-    <!-- section 4 -->
     <section class="places" aria-label="Places">
       <!-- card Куршская коса -->
       <div class="place">
@@ -132,7 +128,6 @@
         </div>
       </div>
     </section>
-    <!-- section 5 -->
     <div class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <p class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</p>
