--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         по&nbsp;родной стране. Мы&nbsp;выбрали
         и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li class="intro__item">Часовых поясов <span class="intro__item-second">11</span>
-          <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__item-second">12</span>
-          <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__item-second">16</span>
-          <li class="intro__item">Природных заповедников <span class="intro__item-second">105</span>
-          <li class="intro__item">Аэропортов <span class="intro__item-second">241</span>
+          <li class="intro__item">Часовых поясов <span class="intro__item-second">11</span></li>
+          <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__item-second">12</span></li>
+          <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__item-second">16</span></li>
+          <li class="intro__item">Природных заповедников <span class="intro__item-second">105</span></li>
+          <li class="intro__item">Аэропортов <span class="intro__item-second">241</span></li>
           </ul>
       </div>
     </section>
