--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="header__main-nav" aria-label="Lang">
         <ul class="header__list">
           <li class="header__item">
-            <a href="#" class="header__lang-link header__lang-link_ru">Ru</a>
+            <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
           </li>
           <li class="header__item">
             <a href="#" class="header__lang-link">En</a>
@@ -48,7 +48,7 @@
           </ul>
       </div>
     </section>
-    <div class="photo-grid">
+    <section class="photo-grid">
       <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Фото из поезда - пейзаж в окне.">
       <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Горные хребты в облаках.">
       <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Собака на стоге сена в поле.">
@@ -61,11 +61,11 @@
       <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Пейзаж Камчатка летом.">
       <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Побережье Байкала зимой.">
       <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Горные вершины в тумане.">
-    </div>
+    </section>
     <section class="places" aria-label="Places">
       <!-- card Куршская коса -->
       <div class="place">
-        <p class="place__title">Куршская коса</p>
+        <h3 class="place__title">Куршская коса</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -78,7 +78,7 @@
       </div>
       <!-- card Кольский -->
       <div class="place">
-        <p class="place__title">Кольский</p>
+        <h3 class="place__title">Кольский</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
@@ -91,7 +91,7 @@
       </div>
       <!-- card Алтай -->
       <div class="place">
-        <p class="place__title">Алтай</p>
+        <h3 class="place__title">Алтай</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
@@ -104,7 +104,7 @@
       </div>
       <!-- card Зимний Байкал -->
       <div class="place">
-        <p class="place__title">Зимний Байкал</p>
+        <h3 class="place__title">Зимний Байкал</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
@@ -117,7 +117,7 @@
       </div>
       <!-- card Карелия -->
       <div class="place">
-        <p class="place__title">Карелия</p>
+        <h3 class="place__title">Карелия</h3>
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
@@ -128,12 +128,12 @@
         </div>
       </div>
     </section>
-    <div class="cover">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <p class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</p>
+    <section class="cover">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <h4 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h4>
         <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
-        </a>
-      </div>
+      </a>
+    </section>
   </main>
   <footer class="footer">
     <nav class="breadcrumb" aria-label="Breadcrumb">
