--- a/index.html
+++ b/index.html
@@ -129,10 +129,12 @@
       </div>
     </section>
     <section class="cover">
-      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <div class="cover__background">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
         <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
-      </a>
+        </a>
+      </div>
     </section>
   </main>
   <footer class="footer">
