--- a/index.html
+++ b/index.html
@@ -129,13 +129,12 @@
       </div>
     </section>
     <section class="cover">
-      <div class="cover__background">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
         <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
         </a>
-      </div>
     </section>
+      <!-- Нужно описать, в чём проблема и где конкретно в коде она находится (указать номер строки или интервала строк) секция cover строки 131-138 -->
   </main>
   <footer class="footer">
     <nav class="breadcrumb" aria-label="Breadcrumb">
